--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth/express": "^0.8.0",
     "@prisma/client": "^5.21.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
