--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
-    "prisma": "^5.21.0"
+    "prisma": "^5.21.0",
+    "typescript": "^5.7.2"
   }
 }
