--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
     "@prisma/client": "^5.21.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
